chore: replace AddressBook with Roster in SignedState (#17076)
Signed-off-by: Tim Farber-Newman <tim.farber-newman@swirldslabs.com>