@@ -31,20 +31,24 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import com.hedera.hapi.node.state.roster.Roster;
+import com.hedera.hapi.node.state.roster.RosterEntry;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.common.crypto.Hash;
 import com.swirlds.common.crypto.Signature;
 import com.swirlds.common.platform.NodeId;
 import com.swirlds.merkledb.MerkleDb;
+import com.swirlds.platform.roster.RosterUtils;
 import com.swirlds.platform.state.signed.SigSet;
 import com.swirlds.platform.state.signed.SignedState;
 import com.swirlds.platform.state.signed.SignedStateInvalidException;
-import com.swirlds.platform.system.address.Address;
-import com.swirlds.platform.system.address.AddressBook;
-import com.swirlds.platform.test.fixtures.addressbook.RandomAddressBookBuilder;
+import com.swirlds.platform.test.fixtures.addressbook.RandomRosterBuilder;
+import com.swirlds.platform.test.fixtures.addressbook.RandomRosterBuilder.WeightDistributionStrategy;
 import com.swirlds.platform.test.fixtures.crypto.PreGeneratedX509Certs;
 import com.swirlds.platform.test.fixtures.state.RandomSignedStateGenerator;
 import edu.umd.cs.findbugs.annotations.NonNull;
+import java.security.PublicKey;
+import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -53,8 +57,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
+import java.util.stream.IntStream;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -81,24 +85,18 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
-
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
         final Set<NodeId> signaturesAdded = new HashSet<>();
@@ -106,19 +104,21 @@ class StateSigningTests {
         final SigSet sigSet = signedState.getSigSet();
 
         final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            signatures.add(buildFakeSignature(
-                    address.getSigPublicKey(), signedState.getState().getHash()));
+        for (final RosterEntry node : nodes) {
+            final PublicKey publicKey =
+                    RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+            signatures.add(buildFakeSignature(publicKey, signedState.getState().getHash()));
         }
 
         long expectedWeight = 0;
         int count = 0;
         for (int index = 0; index < nodeCount; index++) {
-            final Address address = nodes.get(index);
+            final RosterEntry node = nodes.get(index);
+            final NodeId nodeId = NodeId.of(node.nodeId());
             final Signature signature = signatures.get(index);
 
             final boolean previouslyComplete = signedState.isComplete();
-            final boolean completed = signedState.addSignature(address.getNodeId(), signature);
+            final boolean completed = signedState.addSignature(NodeId.of(node.nodeId()), signature);
             final boolean nowComplete = signedState.isComplete();
             final boolean verifiable = signedState.isVerifiable();
 
@@ -130,8 +130,8 @@ class StateSigningTests {
 
             if (!previouslyComplete || !nowComplete) {
                 count++;
-                expectedWeight += address.getWeight();
-                signaturesAdded.add(address.getNodeId());
+                expectedWeight += node.weight();
+                signaturesAdded.add(nodeId);
             }
 
             if (completed) {
@@ -141,26 +141,25 @@ class StateSigningTests {
             if (random.nextBoolean()) {
                 // Sometimes offer the signature more than once. This should have no effect
                 // since duplicates are ignored.
-                assertFalse(signedState.addSignature(address.getNodeId(), signature));
+                assertFalse(signedState.addSignature(nodeId, signature));
             }
 
-            assertEquals(
-                    SUPER_MAJORITY.isSatisfiedBy(expectedWeight, addressBook.getTotalWeight()),
-                    signedState.isComplete());
-            assertEquals(
-                    MAJORITY.isSatisfiedBy(expectedWeight, addressBook.getTotalWeight()), signedState.isVerifiable());
+            final long totalWeight = RosterUtils.computeTotalWeight(roster);
+
+            assertEquals(SUPER_MAJORITY.isSatisfiedBy(expectedWeight, totalWeight), signedState.isComplete());
+            assertEquals(MAJORITY.isSatisfiedBy(expectedWeight, totalWeight), signedState.isVerifiable());
             assertEquals(expectedWeight, signedState.getSigningWeight());
             assertEquals(count, sigSet.size());
 
             for (int metaIndex = 0; metaIndex < nodeCount; metaIndex++) {
-                final NodeId nodeId = nodes.get(metaIndex).getNodeId();
+                final NodeId metaNodeId = NodeId.of(nodes.get(metaIndex).nodeId());
 
-                if (signaturesAdded.contains(nodeId)) {
+                if (signaturesAdded.contains(metaNodeId)) {
                     // We have added this signature, make sure the sigset is tracking it
-                    assertSame(signatures.get(metaIndex), sigSet.getSignature(nodeId));
+                    assertSame(signatures.get(metaIndex), sigSet.getSignature(metaNodeId));
                 } else {
                     // We haven't yet added this signature, the sigset should not be tracking it
-                    assertNull(sigSet.getSignature(nodeId));
+                    assertNull(sigSet.getSignature(metaNodeId));
                 }
             }
 
@@ -186,16 +185,13 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
-
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
@@ -203,38 +199,39 @@ class StateSigningTests {
 
         final SigSet sigSet = signedState.getSigSet();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
         final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            if (isInvalid(address.getNodeId())) {
+        for (final RosterEntry node : nodes) {
+            if (isInvalid(NodeId.of(node.nodeId()))) {
                 // A random signature won't be valid with high probability
                 signatures.add(randomSignature(random));
             } else {
-                signatures.add(buildFakeSignature(
-                        address.getSigPublicKey(), signedState.getState().getHash()));
+                final PublicKey publicKey =
+                        RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+                final Signature signature =
+                        buildFakeSignature(publicKey, signedState.getState().getHash());
+                signatures.add(signature);
             }
         }
 
         long expectedWeight = 0;
         int count = 0;
         for (int index = 0; index < nodeCount; index++) {
-            final Address address = nodes.get(index);
+            final RosterEntry node = nodes.get(index);
+            final NodeId nodeId = NodeId.of(node.nodeId());
             final Signature signature = signatures.get(index);
 
             final boolean previouslyComplete = signedState.isComplete();
-            final boolean completed = signedState.addSignature(address.getNodeId(), signature);
+            final boolean completed = signedState.addSignature(nodeId, signature);
             final boolean nowComplete = signedState.isComplete();
 
-            if (!isInvalid(address.getNodeId()) && !previouslyComplete) {
+            if (!isInvalid(nodeId) && !previouslyComplete) {
                 count++;
-                expectedWeight += address.getWeight();
-                signaturesAdded.add(address.getNodeId());
+                expectedWeight += node.weight();
+                signaturesAdded.add(nodeId);
             }
 
             if (completed) {
@@ -244,26 +241,25 @@ class StateSigningTests {
             if (random.nextBoolean()) {
                 // Sometimes offer the signature more than once. This should have no effect
                 // since duplicates are ignored.
-                assertFalse(signedState.addSignature(address.getNodeId(), signature));
+                assertFalse(signedState.addSignature(nodeId, signature));
             }
 
-            assertEquals(
-                    SUPER_MAJORITY.isSatisfiedBy(expectedWeight, addressBook.getTotalWeight()),
-                    signedState.isComplete());
-            assertEquals(
-                    MAJORITY.isSatisfiedBy(expectedWeight, addressBook.getTotalWeight()), signedState.isVerifiable());
+            final long totalWeight = RosterUtils.computeTotalWeight(roster);
+
+            assertEquals(SUPER_MAJORITY.isSatisfiedBy(expectedWeight, totalWeight), signedState.isComplete());
+            assertEquals(MAJORITY.isSatisfiedBy(expectedWeight, totalWeight), signedState.isVerifiable());
             assertEquals(expectedWeight, signedState.getSigningWeight());
             assertEquals(count, sigSet.size());
 
             for (int metaIndex = 0; metaIndex < nodeCount; metaIndex++) {
-                final NodeId nodeId = nodes.get(metaIndex).getNodeId();
+                final NodeId metaNodeId = NodeId.of(nodes.get(metaIndex).nodeId());
 
-                if (signaturesAdded.contains(nodeId)) {
+                if (signaturesAdded.contains(metaNodeId)) {
                     // We have added this signature, make sure the sigset is tracking it
-                    assertSame(signatures.get(metaIndex), sigSet.getSignature(nodeId));
+                    assertSame(signatures.get(metaIndex), sigSet.getSignature(metaNodeId));
                 } else {
                     // We haven't yet added this signature or it is invalid, the sigset should not be tracking it
-                    assertNull(sigSet.getSignature(nodeId));
+                    assertNull(sigSet.getSignature(metaNodeId));
                 }
             }
 
@@ -283,16 +279,14 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
 
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
@@ -301,17 +295,16 @@ class StateSigningTests {
 
         final SigSet sigSet = signedState.getSigSet();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
         final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            final Signature signature = buildFakeSignature(
-                    address.getSigPublicKey(), signedState.getState().getHash());
+        for (final RosterEntry node : nodes) {
+            final PublicKey publicKey =
+                    RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+            final Signature signature =
+                    buildFakeSignature(publicKey, signedState.getState().getHash());
             final Signature mockSignature = mock(Signature.class);
             when(mockSignature.getBytes()).thenReturn(signature.getBytes());
             when(mockSignature.getType()).thenReturn(signature.getType());
@@ -319,11 +312,13 @@ class StateSigningTests {
         }
 
         for (int index = 0; index < nodeCount; index++) {
+            final RosterEntry node = nodes.get(index);
+            final NodeId nodeId = NodeId.of(node.nodeId());
             final boolean alreadyComplete = signedState.isComplete();
-            signedState.addSignature(nodes.get(index).getNodeId(), signatures.get(index));
+            signedState.addSignature(nodeId, signatures.get(index));
             if (!alreadyComplete) {
-                signaturesAdded.add(nodes.get(index).getNodeId());
-                expectedWeight += nodes.get(index).getWeight();
+                signaturesAdded.add(nodeId);
+                expectedWeight += node.weight();
             }
         }
 
@@ -332,36 +327,31 @@ class StateSigningTests {
         assertEquals(expectedWeight, signedState.getSigningWeight());
 
         // Remove a node from the address book
-        final NodeId nodeRemovedFromAddressBook = nodes.get(0).getNodeId();
-        final long weightRemovedFromAddressBook = nodes.get(0).getWeight();
-        final AddressBook updatedAddressBook = signedState.getAddressBook().remove(nodeRemovedFromAddressBook);
-        // We cannot really update the AddressBook/Roster in an already signed state because it's already hashed and
-        // immutable.
-        // However, we can call a version of the `SignedState.pruneInvalidSignatures()` method that accepts a random
-        // AddressBook instead.
+        final RosterEntry nodeToRemove = nodes.getFirst();
+        final List<RosterEntry> entries = signedState.getRoster().rosterEntries().stream()
+                .filter(entry -> entry.nodeId() != nodeToRemove.nodeId())
+                .toList();
+        final Roster updatedRoster = new Roster(entries);
 
         // Tamper with a node's signature
-        final long weightWithModifiedSignature = nodes.get(1).getWeight();
+        final long weightWithModifiedSignature = nodes.get(1).weight();
         final byte[] tamperedBytes = signatures.get(1).getBytes().toByteArray();
         tamperedBytes[0] = 0;
         when(signatures.get(1).getBytes()).thenReturn(Bytes.wrap(tamperedBytes));
 
-        signedState.pruneInvalidSignatures(updatedAddressBook);
+        signedState.pruneInvalidSignatures(updatedRoster);
 
         assertEquals(signaturesAdded.size() - 2, sigSet.size());
         assertEquals(
-                expectedWeight - weightWithModifiedSignature - weightRemovedFromAddressBook,
-                signedState.getSigningWeight());
+                expectedWeight - weightWithModifiedSignature - nodeToRemove.weight(), signedState.getSigningWeight());
 
         for (int index = 0; index < nodes.size(); index++) {
-            if (index == 0
-                    || index == 1
-                    || !signaturesAdded.contains(nodes.get(index).getNodeId())) {
-                assertNull(sigSet.getSignature(nodes.get(index).getNodeId()));
+            final NodeId nodeId = NodeId.of(nodes.get(index).nodeId());
+
+            if (index == 0 || index == 1 || !signaturesAdded.contains(nodeId)) {
+                assertNull(sigSet.getSignature(nodeId));
             } else {
-                assertSame(
-                        signatures.get(index),
-                        sigSet.getSignature(nodes.get(index).getNodeId()));
+                assertSame(signatures.get(index), sigSet.getSignature(nodeId));
             }
         }
     }
@@ -374,36 +364,29 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
 
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
         final SigSet sigSet = signedState.getSigSet();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
-        final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            signatures.add(buildFakeSignature(
-                    address.getSigPublicKey(), signedState.getState().getHash()));
-        }
-
-        for (int index = 0; index < nodeCount; index++) {
-            signedState.addSignature(nodes.get(index).getNodeId(), signatures.get(index));
+        for (final RosterEntry node : nodes) {
+            final PublicKey publicKey =
+                    RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+            final Signature signature =
+                    buildFakeSignature(publicKey, signedState.getState().getHash());
+            signedState.addSignature(NodeId.of(node.nodeId()), signature);
         }
 
         assertTrue(signedState.isComplete());
@@ -419,58 +402,53 @@ class StateSigningTests {
 
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
-    @DisplayName("Signatures Invalid With Different Address Book Test")
-    void signaturesInvalidWithDifferentAddressBookTest(final boolean evenWeighting) {
+    @DisplayName("Signatures Invalid With Different Roster Test")
+    void signaturesInvalidWithDifferentRosterTest(final boolean evenWeighting) throws CertificateEncodingException {
         final Random random = getRandomPrintSeed();
 
         final int nodeCount = random.nextInt(10, 20);
-
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
 
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
         final SigSet sigSet = signedState.getSigSet();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
-        final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            signatures.add(buildFakeSignature(
-                    address.getSigPublicKey(), signedState.getState().getHash()));
-        }
-
-        for (int index = 0; index < nodeCount; index++) {
-            signedState.addSignature(nodes.get(index).getNodeId(), signatures.get(index));
+        for (final RosterEntry node : nodes) {
+            final PublicKey publicKey =
+                    RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+            final Signature signature =
+                    buildFakeSignature(publicKey, signedState.getState().getHash());
+            signedState.addSignature(NodeId.of(node.nodeId()), signature);
         }
 
         assertTrue(signedState.isComplete());
 
-        final AddressBook newAddressBook = addressBook.copy();
-        for (final Address address : newAddressBook) {
-            // need to get signatures that are outside the current address book range from PreGeneratedX509Certs
-            final X509Certificate certificate = PreGeneratedX509Certs.getSigCert(
-                            50 + address.getNodeId().id())
-                    .getCertificate();
-            final Address newAddress = address.copySetSigCert(certificate);
-            // This replaces the old address
-            newAddressBook.add(newAddress);
+        final List<RosterEntry> newRosterEntries = new ArrayList<>(nodeCount);
+
+        for (final RosterEntry originalNode : roster.rosterEntries()) {
+            final X509Certificate certificate =
+                    PreGeneratedX509Certs.getSigCert(50 + originalNode.nodeId()).getCertificate();
+            final RosterEntry newNode = originalNode
+                    .copyBuilder()
+                    .gossipCaCertificate(Bytes.wrap(certificate.getEncoded()))
+                    .build();
+            newRosterEntries.add(newNode);
         }
 
-        signedState.pruneInvalidSignatures(newAddressBook);
+        final Roster newRoster = new Roster(newRosterEntries);
+
+        signedState.pruneInvalidSignatures(newRoster);
 
         assertEquals(0, sigSet.size());
         assertEquals(0, signedState.getSigningWeight());
@@ -485,56 +463,56 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster tempRoster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
 
         // set node to zero weight
-        final NodeId nodeWithZeroWeight = addressBook.getNodeId(0);
-        addressBook.updateWeight(nodeWithZeroWeight, 0);
+        final List<RosterEntry> rosterEntries = IntStream.range(
+                        0, tempRoster.rosterEntries().size())
+                .mapToObj(idx -> {
+                    final RosterEntry entry = tempRoster.rosterEntries().get(idx);
+                    if (idx == 0) {
+                        // replace the first node such that it has a weight of 0
+                        return entry.copyBuilder().weight(0L).build();
+                    }
+                    return entry;
+                })
+                .toList();
+        final Roster roster = new Roster(rosterEntries);
 
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
         final SigSet sigSet = signedState.getSigSet();
 
-        // Randomize address order
-        final List<Address> nodes = new ArrayList<>(addressBook.getSize());
-        for (final Address address : addressBook) {
-            nodes.add(address);
-        }
+        // Randomize roster order
+        final List<RosterEntry> nodes = new ArrayList<>(roster.rosterEntries());
         Collections.shuffle(nodes, random);
 
-        final List<Signature> signatures = new ArrayList<>(nodeCount);
-        for (final Address address : nodes) {
-            signatures.add(buildFakeSignature(
-                    address.getSigPublicKey(), signedState.getState().getHash()));
+        for (final RosterEntry node : nodes) {
+            final PublicKey publicKey =
+                    RosterUtils.fetchGossipCaCertificate(node).getPublicKey();
+            final Signature signature =
+                    buildFakeSignature(publicKey, signedState.getState().getHash());
+            signedState.addSignature(NodeId.of(node.nodeId()), signature);
         }
 
-        for (int index = 0; index < nodeCount; index++) {
-            signedState.addSignature(nodes.get(index).getNodeId(), signatures.get(index));
-        }
-
-        assertFalse(sigSet.hasSignature(nodeWithZeroWeight), "Signature for node with zero weight should not be added");
+        assertFalse(
+                sigSet.hasSignature(NodeId.of(roster.rosterEntries().getFirst().nodeId())),
+                "Signature for node with zero weight should not be added");
         assertTrue(signedState.isComplete());
 
-        final AddressBook newAddressBook = new AddressBook();
-        int i = 0;
-        for (final Address address : addressBook) {
-            newAddressBook.add(address.copySetWeight(0));
-            final Address newAddress = newAddressBook.getAddress(newAddressBook.getNodeId(i));
-            Assertions.assertNotNull(newAddress);
-            assertTrue(address.equalsWithoutWeight(newAddress));
-            i++;
-        }
+        final List<RosterEntry> newRosterEntries = roster.rosterEntries().stream()
+                .map(entry -> entry.copyBuilder().weight(0L).build())
+                .toList();
+        final Roster newRoster = new Roster(newRosterEntries);
 
-        signedState.pruneInvalidSignatures(newAddressBook);
+        signedState.pruneInvalidSignatures(newRoster);
 
         assertEquals(0, sigSet.size());
         assertEquals(0, signedState.getSigningWeight());
@@ -549,16 +527,14 @@ class StateSigningTests {
 
         final int nodeCount = random.nextInt(10, 20);
 
-        final AddressBook addressBook = RandomAddressBookBuilder.create(random)
+        final Roster roster = RandomRosterBuilder.create(random)
                 .withWeightDistributionStrategy(
-                        evenWeighting
-                                ? RandomAddressBookBuilder.WeightDistributionStrategy.BALANCED
-                                : RandomAddressBookBuilder.WeightDistributionStrategy.GAUSSIAN)
+                        evenWeighting ? WeightDistributionStrategy.BALANCED : WeightDistributionStrategy.GAUSSIAN)
                 .withSize(nodeCount)
                 .build();
 
         final SignedState signedState = new RandomSignedStateGenerator(random)
-                .setAddressBook(addressBook)
+                .setAddressBook(RosterUtils.buildAddressBook(roster))
                 .setSignatures(new HashMap<>())
                 .build();
 
